feat: security 系统初始化